--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,25 @@
 asgiref==3.8.1
+certifi==2025.1.31
+cffi==1.17.1
+charset-normalizer==3.4.1
+cryptography==44.0.2
+dj-database-url==2.3.0
 Django==5.1.1
 django-cors-headers==4.5.0
+django-daraja==1.3.0
 django-filter==24.3
 djangorestframework==3.15.2
+djangorestframework_simplejwt==5.5.0
+gunicorn==23.0.0
+idna==3.10
+packaging==24.2
 pillow==10.4.0
+psycopg2-binary==2.9.10
+pycparser==2.22
+PyJWT==2.9.0
+python-decouple==3.8
+python-dotenv==1.0.1
+requests==2.32.3
 sqlparse==0.5.1
 typing_extensions==4.12.2
+urllib3==2.3.0
