--- a/requirements.txt
+++ b/requirements.txt
@@ -2,9 +2,11 @@ asgiref==3.8.1
 certifi==2025.1.31
 cffi==1.17.1
 charset-normalizer==3.4.1
+cloudinary==1.42.2
 cryptography==44.0.2
 dj-database-url==2.3.0
 Django==5.1.1
+django-cloudinary-storage==0.3.0
 django-cors-headers==4.5.0
 django-daraja==1.3.0
 django-filter==24.3
@@ -20,6 +22,7 @@ PyJWT==2.9.0
 python-decouple==3.8
 python-dotenv==1.0.1
 requests==2.32.3
+six==1.17.0
 sqlparse==0.5.1
 typing_extensions==4.12.2
 urllib3==2.3.0
